connect microservice1 to mongodb

--- a/mongodb-microservice/docker/docker-compose.yaml
+++ b/mongodb-microservice/docker/docker-compose.yaml
@@ -11,5 +11,10 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
+    networks:
+      - sav-network
 volumes:
   data:
+networks:
+  sav-network:
+    name: sav-network
