--- a/microservice1/docker-compose.yaml
+++ b/microservice1/docker-compose.yaml
@@ -1,8 +1,7 @@
 version: "3.8"
-# services
+name: sav-backend
 services:
   microservice1:
-    image: microservice1:1.0.0
     container_name: microservice1
     build:
       context: .
@@ -11,14 +10,12 @@ services:
     env_file:
       - ./.env
     ports:
-      - "9001:9000"
+      - "9008:9000"
     volumes:
       - ./:/app
       - ./node_modules:/app/node_modules
     networks:
       - sav-network
-
-# networks
 networks:
   sav-network:
     name: sav-network
