--- a/api-gateway/docker-compose.yaml
+++ b/api-gateway/docker-compose.yaml
@@ -1,9 +1,7 @@
 version: "3.8"
-
-# services
+name: sav-backend
 services:
   api-gateway:
-    image: api-gateway:1.0.0
     container_name: api-gateway
     build:
       context: .
@@ -12,14 +10,12 @@ services:
     env_file:
       - ./.env
     ports:
-      - "9000:9000"
+      - "5000:9000"
     volumes:
       - ./:/app
       - ./node_modules:/app/node_modules
     networks:
       - sav-network
-
-# networks
 networks:
   sav-network:
     name: sav-network
