--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -1,17 +1,19 @@
 {
-  "type": "module",
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js"
+    "dev": "nodemon server.ts",
+    "build": "rm -rf build/ && prettier --write  && tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
     "axios": "^1.3.4",
     "body-parser": "^1.20.2",
     "colors": "^1.4.0",
@@ -20,6 +22,9 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@types/cors": "^2.8.13",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.3"
   }
 }
