--- a/api-gateway/docker-compose.yaml
+++ b/api-gateway/docker-compose.yaml
@@ -1,5 +1,5 @@
 version: "3.8"
-name: sav-backend
+name: sav
 services:
   api-gateway:
     container_name: api-gateway
@@ -10,7 +10,7 @@ services:
     env_file:
       - ./.env
     ports:
-      - "127.1.1.1:9001:9000"
+      - "127.1.1.0:9000:9000"
     volumes:
       - ./:/app
       - ./node_modules:/app/node_modules
