--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -19,7 +19,9 @@
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
     "graphql": "^16.6.0",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
