--- a/microservice3/package.json
+++ b/microservice3/package.json
@@ -1,24 +1,34 @@
 {
-  "type": "module",
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "build": "rm -rf build/ && prettier --write  && tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "joi": "^17.9.1",
+    "mongoose": "^7.0.3",
+    "morgan": "^1.10.0",
+    "node-fetch": "^3.3.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@types/cors": "^2.8.13",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2"
   }
 }
