--- a/microservice3/package.json
+++ b/microservice3/package.json
@@ -14,16 +14,20 @@
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
+    "apollo-server-express": "^3.12.0",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "graphql": "^16.6.0",
+    "install": "^0.13.0",
     "joi": "^17.9.1",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "npm": "^9.6.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
