--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -20,7 +20,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.6.0",
+    "graphql": "^15.3.0",
+    "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0"
   },
